<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Preferences">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_preferences"
        style="@style/FontTheme"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:id="@+id/show_info"
        android:text="@string/show_information"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:id="@+id/store_info"
        android:text="@string/store_information"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data"
        android:text="@string/data"
        android:layout_marginVertical="35dp"
        android:layout_marginHorizontal="22dp"
        />
</LinearLayout>