<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".External_Storage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/file_name"
        android:text="@string/filename"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:layout_alignBaseline="@id/file_name_editText"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/file_name_editText"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:layout_toRightOf="@id/file_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data"
        android:text="@string/data"
        android:layout_below="@id/file_name"
        android:layout_alignParentLeft="true"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:layout_alignBaseline="@id/data_editText"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_editText"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:layout_below="@id/file_name"
        android:layout_toRightOf="@id/data"
        android:layout_alignParentRight="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/read"
        android:text="@string/data_normal"
        android:layout_below="@id/data_editText"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:layout_toLeftOf="@id/save"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="@string/save_normal"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="22dp"
        android:layout_below="@id/data_editText"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>